# sep-python

./: .gitignore  .gitmodules  .setup.py.swo  .setup.py.swp  .setup_solver.py.swp  .x.py.swp  Makefile  README.md  pyproject.toml  setup.py  setup_solver.py  solver_init.py
sep/: pyvenv.cfg
sep-python/: Hypercube.py  SepVector.py  __init__.py.in  datapath.py  gcp_helper.py  genericIO.py  hypercube.py  io.py  ioBase.py  modes.py  sepConverter.py  sepFile.py  sepIO.py  sepProto.py  sep_converter.py  sepfile.py  test_modes.py  test_sepfile.py
sepPython/: Hypercube.py  SepVector.py  __init__.py  gcp_helper.py  ioBase.py  modes.py  sepIO.py  sepProto.py  sep_converter.py  sep_vector.py  test_Hypercube.py  test_modes.py
sepPython.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sep_python/: __init__.py  _base_grid.py  _base_helper.py  _base_prog.py  _data.py  _database_grid.py  _description.py  _file_data.py  _gcp_helper.py  _gcs_io.py  _headers.py  _hypercube.py  _io_base.py  _modes.py  _sep_converter.py  _sep_description.py  _sep_grid.py  _sep_helpers.py  _sep_io.py  _sep_logger.py  _sep_proto.py  _sep_vector.py  _spike.py  _window.py  gcp_helper.py  hypercube.py  io_base.py  modes.py  sep_converter.py  sep_io.py  sep_proto.py  sep_vector.py
test/: .test_modes.py.swp  .test_sepfile.py.swp  log  test_Hypercube.py  test_base_helper.py  test_base_prog.py  test_converter.py  test_file_data.py  test_inmem.py  test_inmem_text_data.py  test_modes.py  test_sepVector.py  test_sep_description.py  test_sep_helpers.py  test_sep_io.py  test_sepfile.py  test_spike.py
