[project]

name='sep-python'
version='0.9.89'
description='A library for basic SEP IO all in python'

authors=[

    {name="Bob Clapp", email="bob@sep.stanford.edu"}
]

maintainesr=[
    "bob@sep.stanford.edu"
]
dependencies=[ 'google-cloud-storage>=1.34.0',
                'numba==0.58',
                'numpy==1.24',
                'generic-solver @ git+https://github.com/SEP-software/python-solver.git@d915ea9c6a0dee6c17b675d45866af0554e0b00c'

            ]

[setup]
scripts=['bin/Window','bin/Spike']


[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]


