[project]

name='sep-python'
version='0.9.93'
description='A library for basic SEP IO all in python'

authors=[

    {name="Bob Clapp", email="bob@sep.stanford.edu"}
]

maintainesr=[
    "bob@sep.stanford.edu"
]
dependencies=[ 'google-cloud-storage>=1.34.0',
                'numba>=0.58',
                'generic-solver @ git+https://github.com/SEP-software/python-solver.git@b08c685385539b92b513df3e2b9d5067a202d38c'

            ]

[setup]
scripts=['bin/Window','bin/Spike']


[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]


